--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:id="@+id/carouselView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:spacing="20" />
+            app:item_spacing="60"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
