fix pre ziskanie pozicie snapu

--- a/app/src/main/res/layout/center_carousel_item.xml
+++ b/app/src/main/res/layout/center_carousel_item.xml
@@ -9,13 +9,12 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="7dp"
-        app:cardElevation="10dp">
+        app:cardCornerRadius="7dp">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
             android:scaleType="centerCrop"
             tools:srcCompat="@tools:sample/avatars[3]" />
     </androidx.cardview.widget.CardView>
